--- a/assets/Languages/pt-PT.cfg
+++ b/assets/Languages/pt-PT.cfg
@@ -1,7 +1,7 @@
 ﻿; openBVE interface language configuration file
 ; Translated by ALP (Ducatista)
-; last updated: 2017-03-05
-;NOTA DO TRADUTOR: Esta tradução não segue o ilegal Acordo Ortográfico de 1990 e respeita a Convenção Ortográfica de 1945 (Dec-Lei 35228 de 08-12-1945).
+; last updated: 2017-03-25 14:55
+; NOTA DO TRADUTOR: Esta tradução não segue o ilegal Acordo Ortográfico de 1990 e respeita a Convenção Ortográfica de 1945 (Dec-Lei 35228 de 08-12-1945).
 
 [program]
 title = openBVE
@@ -128,7 +128,7 @@ shownlist = Estes são mostrados na lista abaixo:
 selection_none = Nenhum pacote seleccionado.
 selection_none_website = Não foi fornecida nenhuma página da internet.
 list = Pacotes instalados
-list_type = Seleccione o tipo de pacotes que deseja ver:
+list_type = Seleccione o tipo de pacote que deseja ver:
 list_name = Nome
 list_version = Versão
 list_minimum = Versão mínima
@@ -206,7 +206,7 @@ uninstall_success = A desinstalação deste pacote foi bem sucedida.
 uninstall_success_header = Desinstalação bem sucecdida
 uninstall_log = Um relatório é mostrado abaixo:
 uninstall_button = Desinstalar pacote
-uninstall_broken = Alguns pacotes existentes poderão ser quebrados por esta acção.
+uninstall_broken = Alguns pacotes existentes poderão ser danificados por esta acção.
 uninstall_missing_xml = Incapaz de desinstalar o pacote seleccionado. \r\n Falta a lista do ficheiro XML.
 uninstall_database_remove = Pretende remover este pacote da base de dados?
 database_save_error = Ocorreu um erro ao guardar a base de dados do pacote. \r\n Por favor verifique as permissões de escrita.
@@ -240,12 +240,12 @@ list_type_digital = Digital
 list_type_analoghalf = Analógico (metade do eixo)
 list_type_analogfull = Analógico (todo o eixo)
 list_description = Descrição
-list_assignment = Adstrito
-add = Adicionar controlo
-remove = Remover controlo
+list_assignment = Atribuído a:
+add = Adicionar controle
+remove = Remover controle
 import = Importar...
 export = Exportar...
-reset = Redefinir para os padrões
+reset = Redefinir
 up = Para cima
 down = Para baixo
 selection = Comando actualmente seleccionado
@@ -258,23 +258,23 @@ selection_keyboard_modifiers = Modificadores:
 selection_keyboard_modifiers_shift = Maiúsculas
 selection_keyboard_modifiers_ctrl = Ctrl
 selection_keyboard_modifiers_alt = Alt
-selection_joystick = Manípulo:
-selection_joystick_assignment = Adstrito:
-selection_joystick_assignment_grab = Clique aqui para o Manípulo se seleccionar automaticamente.\r\n\r\nContudo, restaure todos os eixos e solte todos os botões antes desta operação.
+selection_joystick = Joystick:
+selection_joystick_assignment = Atribuído a:
+selection_joystick_assignment_grab = Clique aqui para o Joystick se seleccionar automaticamente.\r\n\r\nContudo, restaure todos os eixos e solte todos os botões antes desta operação.
 selection_joystick_assignment_grab_normal = Carregue em qualquer tecla ou desloque o eixo na direcção desejada...
 selection_joystick_assignment_grab_fullaxis = Desloque um eixo qualquer na direcção de "aumentar" ou "força"...
-attached = Manípulos ligados
+attached = Joysticks ligados
 assignment_keyboard = Teclado
-assignment_keyboard_shift = Shift +\x20
+assignment_keyboard_shift = Maiúsculas +\x20
 assignment_keyboard_ctrl = Ctrl +\x20
 assignment_keyboard_alt = Alt +\x20
-assignment_joystick = Manípulo [index]
+assignment_joystick = Joystick [index]
 assignment_joystick_axis = eixo [index]
 assignment_joystick_axis_negative = sentido negativo
 assignment_joystick_axis_positive = sentido positivo
 assignment_joystick_axis_invalid = sentido inválido
 assignment_joystick_button = botão [index]
-assignment_joystick_hat = botão hat [index]
+assignment_joystick_hat = botão do topo [index]
 assignment_joystick_hat_left = esquerda
 assignment_joystick_hat_upleft = Esquerda acima
 assignment_joystick_hat_up = acima
@@ -323,9 +323,9 @@ quality_distance_viewingdistance = Visibilidade:
 quality_distance_viewingdistance_meters = m
 quality_distance_motionblur = Desfocagem de movimento:
 quality_distance_motionblur_none = Não disponível
-quality_distance_motionblur_low = Baixo
-quality_distance_motionblur_medium = Médio
-quality_distance_motionblur_high = Alto
+quality_distance_motionblur_low = Baixoa
+quality_distance_motionblur_medium = Média
+quality_distance_motionblur_high = Alta
 misc = Diversos
 misc_simulation = Detalhes da simulação
 misc_simulation_toppling = Inversões
@@ -334,7 +334,7 @@ misc_simulation_derailments = Descarrilamentos
 misc_simulation_blackbox = Permitir caixa negra
 misc_simulation_loadingsway = Permitir a oscilação no carregamento
 misc_controls = Manípulos
-misc_controls_joysticks = Manípulos activados
+misc_controls_joysticks = Joysticks activados
 misc_controls_threshold = Sensibilidade:
 misc_controls_ebaxis = Permitir o Homem-morto no travão
 misc_sound = Som
@@ -352,11 +352,11 @@ advanced_disable_displaylists = Desactivar listas de exibição do OpenGL
 advanced_timefactor = Factor de tempo acelerado
 advanced_unload_textures = Descarregar as texturas não utilizadas
 other = Outro
-other_timetable_mode = Modo de Tabela-horária
+other_timetable_mode = Tabela-horária
 other_timetable_mode_none = Nenhum
 other_timetable_mode_default = Padrão
-other_timetable_mode_autogenerated = Tabela-horária auto-gerada
-other_timetable_mode_prefercustom = Preferir tabela-horária personalizada
+other_timetable_mode_autogenerated = Auto-gerada
+other_timetable_mode_prefercustom = Personalizada
 package_choose = Escolher...
 package_route_directory = Directório de instalação da linha:
 package_train_directory = Directório de instalação do comboio:
@@ -492,18 +492,18 @@ quit = Sair do jogo
 quit_question = Quer mesmo sair do jogo?
 quit_no = Não
 quit_yes = Sim
-back = ← Back
+back = ← Voltar
 customize_controls = Personalizar comandos
 assign = Por favor prima qualquer tecla ou mova um manípulo para definir este controle...
 keyboard = Keyboard
-joystick = Manípulo
-joystick_notavailable = N/A
-joystickdirection_positive = Positive
-joystickdirection_negative = Negative
-assignment_current = Current assignment:
+joystick = Joystick
+joystick_notavailable = Indisponível
+joystickdirection_positive = Positiva
+joystickdirection_negative = Negativa
+assignment_current = Actual atribuição:
+
 
 ; ----- quick reference -----
-
 [lamps]
 ats = ATS
 atsoperation = ATS EM SERVIÇO
@@ -542,7 +542,6 @@ right = R
 score = Pontuação:\x20
 
 ; ----- commands -----
-
 [commands]
 POWER_INCREASE = Aumenta um ponto à força, em comboios com controladores de dois manípulos
 POWER_DECREASE = Diminui um ponto à força, em comboios com controladores de dois manípulos
@@ -557,7 +556,7 @@ SINGLE_POWER = Desloca o manípulo um ponto na direcção de força, em comboios
 SINGLE_NEUTRAL = Desloca o manípulo um ponto na direcção de neutro, em comboios com controladores dum único manípulo
 SINGLE_BRAKE = Desloca o manípulo um ponto na direcção de travagem, em comboios com controladores dum único manípulo
 SINGLE_EMERGENCY = Acciona os travões de emergência, em comboios com controladores dum único manípulo
-SINGLE_FULLAXIS = Controla a força e a travagem através de todo o eixo do manípulo, em comboios com controladores de dois manípulos
+SINGLE_FULLAXIS = Controla a força e a travagem através de todo o eixo do manípulo, em comboios com controladores dum único manípulo
 REVERSER_FORWARD = Desloca o inversor um ponto para a frente
 REVERSER_BACKWARD = Desloca o inversor um ponto para trás
 REVERSER_FULLAXIS = Controla o inversor de marcha através de todo o eixo do manípulo
@@ -584,6 +583,10 @@ SECURITY_I = Função I do sistema de segurança
 SECURITY_J = Função J do sistema de segurança
 SECURITY_K = Função K do sistema de segurança
 SECURITY_L = Função L do sistema de segurança
+SECURITY_M = Indisponível
+SECURITY_N = Indisponível
+SECURITY_O = Indisponível
+SECURITY_P = Indisponível
 CAMERA_INTERIOR = Muda para a vista interior do comboio
 CAMERA_EXTERIOR = Muda para a vista exterior do comboio
 CAMERA_TRACK = Muda para a vista da linha
@@ -600,15 +603,15 @@ CAMERA_ROTATE_UP = Roda a câmara para cima
 CAMERA_ROTATE_DOWN = Roda a câmara para baixo
 CAMERA_ROTATE_CCW = Roda a câmara no sentido contrário ao dos ponteiros do relógio
 CAMERA_ROTATE_CW = Roda a câmara no sentido dos ponteiros do relógio
-CAMERA_ZOOM_IN = Diminui
-CAMERA_ZOOM_OUT = Aumenta
+CAMERA_ZOOM_IN = Aproximar
+CAMERA_ZOOM_OUT = Afastar
 CAMERA_POI_PREVIOUS = Salta para o anterior ponto de interesse da linha.
 CAMERA_POI_NEXT = Salta para o próximo ponto de interesse da linha.
 CAMERA_RESET = Desloca a câmara para as pré-definições
 CAMERA_RESTRICTION = Activa ou desactiva a restricção da câmara à vista interior
-TIMETABLE_TOGGLE = Alterna entre diferentes modos de horário
-TIMETABLE_UP = Percorre o horário para cima
-TIMETABLE_DOWN = Percorre o horário para baixo
+TIMETABLE_TOGGLE = Alterna entre diferentes modos de tabela-horária
+TIMETABLE_UP = Percorre a tabela-horária para cima
+TIMETABLE_DOWN = Percorre a tabela-horária para baixo
 MENU_ACTIVATE = Mostra o menú do jogo
 MENU_UP = Desloca o cursor para cima dentro do menú do jogo
 MENU_DOWN = Desloca o cursor para baixo dentro do menú do jogo
@@ -624,10 +627,10 @@ MISC_FULLSCREEN = Alterna entre o modo de tela inteira e de janela
 MISC_MUTE = Fecha e abre o som
 MISC_QUIT = Abandona a simulação
 MISC_INTERFACE = Alterna entre diferentes modos de interface
-MISC_BACKFACE = Activa ou desactiva a troca de face (backface culling)
+MISC_BACKFACE = Activa ou desactiva a troca de faces (backface culling)
 MISC_CPUMODE = Liga ou desliga o modo reduzido da CPU
-DEBUG_WIREFRAME = Activa ou desactiva o modo "wireframe"
-DEBUG_NORMALS = Mostra ou esconde a posição dos "vertex"
+DEBUG_WIREFRAME = Activa ou desactiva o modo "vêr grelha"
+DEBUG_NORMALS = Mostra ou esconde a posição dos "vértices"
 DEBUG_BRAKE = Mostra ou esconde o estado do sistema de travagem
 ROUTE_INFORMATION = Mostra ou esconde a janela de informação da linha
 
@@ -641,18 +644,18 @@ HEADLIGHTS = Alterna os faróis do comboio
 ;;Steam engine
 LIVE_STEAM_INJECTOR = Activa ou desactiva o injector de vapor vivo
 EXHAUST_STEAM_INJECTOR = Activa ou desactiva o injector de vapor de escape
-INCREASE_CUTOFF = Aumenta o cutoff
-DECREASE_CUTOFF = Diminui o cutoff
+INCREASE_CUTOFF = Aumenta a admissão de vapor
+DECREASE_CUTOFF = Diminui a admdissão de vapor
 BLOWERS = Activa ou desactiva os sopradores
 ;;Diesel engine
 ENGINE_START = Liga o motor
 ENGINE_STOP = Desliga o motor
-GEAR_UP = Engrena uma mudança superior num comboio equipado com caixa-de-velocidades
-GEAR_DOWN = Engrena uma mudança inferior num comboio equipado com caixa-de-velocidades
+GEAR_UP = Engrena uma mudança superior num comboio com caixa-de-velocidades
+GEAR_DOWN = Engrena uma mudança inferior num comboio com caixa-de-velocidades
 ;;Electric engine
 RAISE_PANTOGRAPH = Levanta o pantógrafo
 LOWER_PANTOGRAPH = Baixa o pantógrafo
-MAIN_BREAKER = Alterna o disjunctor principal
+MAIN_BREAKER = Disjunctor principal
 
 ; ----- keys -----
 
@@ -667,24 +670,24 @@ MAIN_BREAKER = Alterna o disjunctor principal
 7 = 7
 8 = 8
 9 = 9
-AMPERSAND = E comercial
-ASTERISK = Asterisco
-AT = Arroba
-BACKQUOTE = Apóstrofo
-BACKSLASH = Barra invertida
+AMPERSAND = Barra
+ASTERISK = Abre parêntesis
+AT = Comas duplas
+BACKQUOTE = Barra invertida
+BACKSLASH = Não disponível
 BACKSPACE = Retrocesso
-BREAK = Pausa
+BREAK = Interrupção
 CAPSLOCK = Bloqueador de maiúsculas
-CARET = Acento circunflexo
+CARET = E comercial
 CLEAR = Cancelar
-COLON = Dois pontos
+COLON = Ç maiúsculo
 COMMA = Vírgula
 DELETE = Suprimir
 DOLLAR = Cifrão
 DOWN = Seta Abaixo
 END = Fim
 ENTER = Executar
-EQUALS = Igual
+EQUALS = Abre aspas angulares
 ESCAPE = Sair
 EURO = Euro
 EXCLAIM = Ponto de exclamação
@@ -703,10 +706,10 @@ F12 = F12
 F13 = F13
 F14 = F14
 F15 = F15
-GREATER = Maior do que
+GREATER = Dois pontos
 HASH = Cardinal
 HELP = Ajuda
-HOME = Início
+HOME = Início da linha
 INSERT = Inserir
 KP0 = 0 (teclado numérico)
 KP1 = 1 (teclado numérico)
@@ -728,29 +731,29 @@ KP_PLUS = Adicionar (teclado numérico)
 LALT = Alt esquerda
 LCTRL = Ctrl esquerda
 LEFT = Seta esquerda
-LEFTBRACKET = Abrir parêntesis recto
-LEFTPAREN = Abrir parêntesis curvo
-LESS = Menor do que
+LEFTBRACKET = Somar (teclado alfabético)
+LEFTPAREN = Fechar parêntesis curvo
+LESS = Ponto e vírgula
 LMETA = Windows esquerda
 LSHIFT = Maiúsculas esquerda
 LSUPER = Aplicação esquerda
 MENU = Menú
-MINUS = Menos
+MINUS = Apóstrofo
 MODE = Alt Gr
-NUMLOCK = Bloquear teclado numérico
-PAGEDOWN = Página seguinte
-PAGEUP = Página precedente
+NUMLOCK = Bloqueio do teclado numérico
+PAGEDOWN = Início da página
+PAGEUP = Fim da página
 PAUSE = Pausa
 PERIOD = Ponto
-PLUS = Mais
+PLUS = Fecha aspas angulares
 POWER = Ligar/desligar
 PRINT = Imprimir tela
-QUESTION = Ponto de interrogação
-QUOTE = Apóstrofo
-QUOTEDBL = Aspas
+QUESTION = Sublinhado
+QUOTE = O sobre traço
+QUOTEDBL = A sobre traço
 RALT = Alt direita
 RCTRL = Ctrl direita
-RETURN = Executar
+RETURN = Mudança de linha
 RIGHT = Seta direita
 RIGHTBRACKET = Fechar parêntesis recto
 RIGHTPAREN = Fechar parêntesis curvo
@@ -759,7 +762,7 @@ RSHIFT = Maiúsculas direita
 RSUPER = Aplicação direita
 SCROLLLOCK = Bloqueio da repetição
 SEMICOLON = Ponto e vírgula
-SLASH = Barra normal
+SLASH = Hífen
 SPACE = Espaço
 SYSREQ = SysRq
 TAB = Tabulação
