New: Add in-game gradient display option

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Selecciona una acció al menú del joc
 MENU_BACK = Torna enrere al menú del joc
 MISC_CLOCK = Mostra o oculta el rellotge
 MISC_SPEED = Canvia entre diferents modes de velocitat de la pantalla
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Canvia entre diferents factors d'acceleració de temps
 MISC_FPS = Mostra o oculta el nombre de fotogrames per segon
 MISC_AI = Activa o desactiva la intel·ligència artificial (IA)
