--- a/assets/Languages/cs-CZ.cfg
+++ b/assets/Languages/cs-CZ.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Výběr položky v menu
 MENU_BACK = Zpět v menu
 MISC_CLOCK = Zobrazení/skrytí času
 MISC_SPEED = Přepínání mezi různými režimy zobrazování rychlosti
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Zrychlení času ZAP/VYP
 MISC_FPS = Zobrazení/skrytí počtu snímků (FPS)
 MISC_AI = Ovládání vlaku autopilotem
