--- a/assets/Languages/fi-FI.cfg
+++ b/assets/Languages/fi-FI.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Suorittaa valitun komennon valikossa
 MENU_BACK = Palaa takaisin edelliseen valikkoon valikon sisällä
 MISC_CLOCK = Kellon näyttö tai piilotus
 MISC_SPEED = Vaihtaa nopeusnäyttöjen välillä
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Vaihtaa simulaationopeuksien välillä
 MISC_FPS = Näytä tai piilota FPS-näyttö
 MISC_AI = Aktivoi tai poistaa automaattiajon
