--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = A játék közbeni menüben kiválasztott parancs végrehajtása
 MENU_BACK = Visszalép a játék közbeni menüben
 MISC_CLOCK = Óra megjelenítése/elrejtése
 MISC_SPEED = Váltogatés a sebességkijelző különböző működési módjai között
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Váltogatás különböző időgyorsító módok közt
 MISC_FPS = A képfrissítés értékének (fps) megjelenítése/elrejtése
 MISC_AI = Robotpilóta be/ki kapcsolása
