--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -616,6 +616,7 @@ MENU_ENTER = ゲーム内メニュー・実行
 MENU_BACK = ゲーム内メニュー・戻り
 MISC_CLOCK = 時計表示切替
 MISC_SPEED = 速度表示切替
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = 時間加速係数切替
 MISC_FPS = フレームレート表示切替
 MISC_AI = ＡＩ運転切替
