--- a/assets/Languages/ko-KR.cfg
+++ b/assets/Languages/ko-KR.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = 게임 메뉴:확인
 MENU_BACK = 게임 메뉴:취소
 MISC_CLOCK = 시계 표시 보이기/숨기기
 MISC_SPEED = 속도 표시 보이기/숨기기
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = 다른 시간대 표시 보이기/숨기기
 MISC_FPS = 프레임률 표시 보이기/숨기기
 MISC_AI = 자동 운행 전환
