--- a/assets/Languages/pt-BR.cfg
+++ b/assets/Languages/pt-BR.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Executa a opção selecionada no menu do jogo
 MENU_BACK = Volta atrás no menu do jogo
 MISC_CLOCK = Mostra ou esconde o relógio
 MISC_SPEED = Alterna entre diferentes modos de velocidade de visualização
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Toggles through different time acceleration factors
 MISC_FPS = Mostra ou esconde o frame rate
 MISC_AI = Ativa ou desativa o virtual driver (AI)
