--- a/assets/Languages/ro-RO.cfg
+++ b/assets/Languages/ro-RO.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Execută comanda selectată în meniul din joc
 MENU_BACK = Mergi inapoi în meniul din joc
 MISC_CLOCK = Afişează sau ascunde ceasul
 MISC_SPEED = Comută prin moduri diferite de afişare a vitezei
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Comută prin diferiţi factori de accelerare de timp
 MISC_FPS = Afişează sau ascunde rata de afişare cadru
 MISC_AI = Activează sau dezactivează modul ATC(Automatic Train Control)
