--- a/assets/Languages/uk-UA.cfg
+++ b/assets/Languages/uk-UA.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Обрати опції з меню гри
 MENU_BACK = Повернутися до попередньої позиції в меню гри
 MISC_CLOCK = Показати/сховати годинник
 MISC_SPEED = Перемикання між іншими режимами показу швидкості
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Чинники часу прискорення
 MISC_FPS = Увімкнення або вимкнення показу FPS
 MISC_AI = Активувати/Деактивувати Автопілот(AI)
