--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = 在游戏选单中作出选择指令
 MENU_BACK = 在游戏选单中返回
 MISC_CLOCK = 显示或隐藏时钟
 MISC_SPEED = 切换到不同的车速显示模式
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = 切换到不同的时间倍速
 MISC_FPS = 显示或隐藏画面速度
 MISC_AI = 启动或关闭人工智能司机
