--- a/assets/Languages/zh-TW.cfg
+++ b/assets/Languages/zh-TW.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = 在遊戲選單中作出選擇指令
 MENU_BACK = 在遊戲選單中返回
 MISC_CLOCK = 顯示或隱藏時鐘
 MISC_SPEED = 切換到不同的車速顯示模式
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = 切換到不同的時間速度
 MISC_FPS = 顯示或隱藏幀率
 MISC_AI = 啟動或關閉人工智慧司機
