--- a/assets/Languages/de-DE.cfg
+++ b/assets/Languages/de-DE.cfg
@@ -615,6 +615,7 @@ MENU_ENTER = Aktiviert den im Ingame-Menü gewählten Befehl
 MENU_BACK = Geht im Ingame-Menü einen Schritt zurück
 MISC_CLOCK = Zeigt/Versteckt die Uhr
 MISC_SPEED = Wechselt die Darstellung der Geschwindigkeitsanzeige
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Wechselt den Zeitraffungsfaktor
 MISC_FPS = Aktiviert/Deaktiviert die Frameratenanzeige
 MISC_AI = Aktiviert/Deaktiviert den Autopiloten
