--- a/assets/Languages/en-GB.cfg
+++ b/assets/Languages/en-GB.cfg
@@ -619,6 +619,7 @@ MENU_ENTER = Performs the selected command within the in-game menu
 MENU_BACK = Goes back within the in-game menu
 MISC_CLOCK = Shows or hides the clock
 MISC_SPEED = Toggles through different speed display modes
+MISC_GRADIENT = Toggles through different gradient display modes
 MISC_TIMEFACTOR = Toggles through different time acceleration factors
 MISC_FPS = Shows or hides the frame rate display
 MISC_AI = Activates or deactivates the virtual driver (AI)
