Change: Add cutoff & wipers to default controls

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -365,17 +365,17 @@
   </PropertyGroup>
   <PropertyGroup>
     <!-- Copy in dependancies and child projects -->
+	<!-- Finally, set LBA flag & cleanup -->	
     <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
-		xcopy "$(SolutionDir)assets\*.*" "$(TargetDir)Data" /Y /I /E /C 
+		xcopy "$(SolutionDir)assets\*.*" "$(TargetDir)Data" /Y /I /E /C	
+"$(TargetDir)LBAHeader.exe" OpenBve.exe 
+del "$(TargetDir)LBAHeader*.*"
 	</PostBuildEvent>
     <!-- NOTE: Whilst AtsPluginProxy.dll is Windows specific, we still want to copy it in the auto-generated nightly builds -->
     <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
 		cp -rf "$(SolutionDir)assets/." "$(TargetDir)Data/"
-	</PostBuildEvent>
-	<PostBuildEvent>
-	<!-- Set LBA flag & cleanup -->
-		"$(TargetDir)LBAHeader.exe" OpenBve.exe
-		del "$(TargetDir)LBAHeader.exe"
+mono "$(TargetDir)LBAHeader.exe" OpenBve.exe 
+rm -rf "$(TargetDir)LBAHeader"*.*
 	</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
