Move LBAHeader to DevTools folder; Fix makefile; Fix bash script with windows line endings

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -385,6 +385,12 @@ mono "$(TargetDir)LBAHeader.exe" OpenBve.exe
 rm -rf "$(TargetDir)LBAHeader"*.*
 	</PostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+		xcopy "$(SolutionDir)assets\*.*" "$(TargetDir)Data" /Y /I /E /C	
+"$(TargetDir)DevTools\LBAHeader.exe" OpenBve.exe 
+	</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="AfterBuild">
