--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Simulation\TrainManager\Station.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Horn.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Reverser.cs" />
+    <Compile Include="Simulation\TrainManager\Train\Train.Station.cs" />
     <Compile Include="Simulation\World\BackgroundManager.cs" />
     <Compile Include="Simulation\World\Transformations.cs" />
     <Compile Include="System\Functions\CrashHandler.cs" />
