Correct error in running LBAHeader on xbuild

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -375,20 +375,12 @@
     <!-- Finally, set LBA flag & cleanup -->
     <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
 		xcopy "$(SolutionDir)assets\*.*" "$(TargetDir)Data" /Y /I /E /C	
-"$(TargetDir)LBAHeader.exe" OpenBve.exe 
-del "$(TargetDir)LBAHeader*.*"
+"$(TargetDir)DevTools\LBAHeader.exe" OpenBve.exe 
 	</PostBuildEvent>
     <!-- NOTE: Whilst AtsPluginProxy.dll is Windows specific, we still want to copy it in the auto-generated nightly builds -->
     <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
 		cp -rf "$(SolutionDir)assets/." "$(TargetDir)Data/"
-mono "$(TargetDir)LBAHeader.exe" OpenBve.exe 
-rm -rf "$(TargetDir)LBAHeader"*.*
-	</PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>
-		xcopy "$(SolutionDir)assets\*.*" "$(TargetDir)Data" /Y /I /E /C	
-"$(TargetDir)DevTools\LBAHeader.exe" OpenBve.exe 
+mono "$(TargetDir)DevTools\LBAHeader.exe" OpenBve.exe 
 	</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
