Move panel loading to a property of the train

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -125,8 +125,10 @@
     <Compile Include="Simulation\TrainManager\Train\Train.Axle.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Base.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Car.cs" />
+    <Compile Include="Simulation\TrainManager\Train\Train.CarSection.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.CarSounds.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.CarSpecs.cs" />
+    <Compile Include="Simulation\TrainManager\Train\Train.Coupler.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Specs.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.State.cs" />
     <Compile Include="Graphics\Renderer\Background.cs" />
