Separate re-adhesion device, constant speed device & accel calcs

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -122,6 +122,8 @@
     <Compile Include="Game\Signalling.cs" />
     <Compile Include="Game\Station.cs" />
     <Compile Include="Simulation\TrainManager\Train.Bogie.cs" />
+    <Compile Include="Simulation\TrainManager\Train\GenericDevices\ConstantSpeedDevice.cs" />
+    <Compile Include="Simulation\TrainManager\Train\GenericDevices\ReadheasionDevice.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Axle.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Base.cs" />
     <Compile Include="Simulation\TrainManager\Train\Train.Car.cs" />
