--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -132,13 +132,15 @@
     <Compile Include="Graphics\Renderer\Overlays.Functions.cs" />
     <Compile Include="Graphics\Renderer\Structures.cs" />
     <Compile Include="Graphics\Renderer\Objects.cs" />
-    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.CompatibilityObjects.cs" />
-    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Functions.cs" />
-    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Objects.cs" />
-    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Structures.cs" />
-    <Compile Include="Parsers\DynamicBackgroundParser.cs" />
-    <Compile Include="Parsers\DynamicLightParser.cs" />
-    <Compile Include="Parsers\MarkerScriptParser.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.CompatibilityObjects.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Functions.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Objects.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Structures.cs" />
+    <Compile Include="Parsers\Script\DynamicBackgroundParser.cs" />
+    <Compile Include="Parsers\Script\DynamicLightParser.cs" />
+    <Compile Include="Parsers\Script\MarkerScriptParser.cs" />
+    <Compile Include="Parsers\Object\Loksim3D\GroupParser.cs" />
+    <Compile Include="Parsers\Object\Loksim3D\ObjectParser.cs" />
     <Compile Include="Parsers\SoundConfiguration\SoundCfg.Ats.cs" />
     <Compile Include="Parsers\SoundConfiguration\SoundCfg.Base.cs" />
     <Compile Include="Parsers\SoundConfiguration\SoundCfg.Bve2.cs" />
@@ -287,13 +289,13 @@
     <Compile Include="OldCode\TrackManager.cs" />
     <Compile Include="OldCode\TrainManager.cs" />
     <Compile Include="OldCode\World.cs" />
-    <Compile Include="OldParsers\AnimatedObjectParser.cs" />
-    <Compile Include="OldParsers\ExtensionsCfgParser.cs" />
-    <Compile Include="OldParsers\Panel2CfgParser.cs" />
-    <Compile Include="OldParsers\CsvB3dObjectParser.cs" />
-    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.cs" />
-    <Compile Include="OldParsers\XObjectParser.cs" />
-    <Compile Include="OldParsers\PanelCfgParser.cs" />
+    <Compile Include="Parsers\Object\BVE\AnimatedObjectParser.cs" />
+    <Compile Include="Parsers\Train\ExtensionsCfgParser.cs" />
+    <Compile Include="Parsers\Panel\Panel2CfgParser.cs" />
+    <Compile Include="Parsers\Object\BVE\CsvB3dObjectParser.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.cs" />
+    <Compile Include="Parsers\Object\Generic\XObjectParser.cs" />
+    <Compile Include="Parsers\Panel\PanelCfgParser.cs" />
     <Compile Include="System\Functions\FileSystem.cs" />
     <Compile Include="System\Host.cs" />
     <Compile Include="System\Input\Joysticks.cs" />
@@ -310,7 +312,7 @@
       <SubType>Designer</SubType>
       <DependentUpon>formMain.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="OldParsers\TrainDatParser.cs" />
+    <Compile Include="Parsers\Train\TrainDatParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
