--- a/source/RouteViewer/RouteViewer.csproj
+++ b/source/RouteViewer/RouteViewer.csproj
@@ -89,6 +89,8 @@
     <Compile Include="Parsers\AnimatedObjectParser.cs" />
     <Compile Include="Parsers\CsvB3dObjectParser.cs" />
     <Compile Include="Parsers\CsvRwRouteParser.cs" />
+    <Compile Include="Parsers\Ls3DGrpParser.cs" />
+    <Compile Include="Parsers\Ls3DObjectParser.cs" />
     <Compile Include="Parsers\WaveParser.cs" />
     <Compile Include="Parsers\XObjectParser.cs" />
     <Compile Include="Renderer.Loading.cs" />
