--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Packages.Database.cs" />
     <Compile Include="Packages.Loksim3D.cs" />
     <Compile Include="Path.cs" />
+    <Compile Include="Path.Loksim3D.cs" />
     <Compile Include="Runtime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedMesh.cs">
