--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -94,6 +94,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Dependencies\OpenTK.dll</HintPath>
     </Reference>
+    <Reference Include="PIEHid32Net">
+      <HintPath>..\..\dependencies\PIEHid32Net.dll</HintPath>
+    </Reference>
     <Reference Include="SharpCompress.Unsigned, Version=0.11.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Dependencies\SharpCompress.Unsigned.dll</HintPath>
@@ -166,6 +169,8 @@
     <Compile Include="System\Functions\TextEncoding.cs" />
     <Compile Include="System\Input\Commands.cs" />
     <Compile Include="System\Input\Controls.cs" />
+    <Compile Include="System\Input\JoystickManager.RailDriver.cs" />
+    <Compile Include="System\Input\JoystickManager.StandardJoystick.cs" />
     <Compile Include="System\Logging\BlackBox.cs" />
     <Compile Include="System\Logging\Score.cs" />
     <Compile Include="System\Options.cs" />
@@ -296,7 +301,7 @@
     <Compile Include="OldParsers\PanelCfgParser.cs" />
     <Compile Include="System\Functions\FileSystem.cs" />
     <Compile Include="System\Host.cs" />
-    <Compile Include="System\Input\Joysticks.cs" />
+    <Compile Include="System\Input\JoystickManager.cs" />
     <Compile Include="System\Functions\Plugins.cs" />
     <Compile Include="System\Program.cs" />
     <EmbeddedResource Include="UserInterface\formBugReport.resx">
