--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Packages.cs" />
     <Compile Include="Packages.Database.cs" />
     <Compile Include="Packages.Loksim3D.cs" />
+    <Compile Include="Packages.SkippedFiles.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Path.Loksim3D.cs" />
     <Compile Include="Runtime.cs" />
