New: Add calibration dialog for RailDriver.

--- a/assets/Languages/de-CH.cfg
+++ b/assets/Languages/de-CH.cfg
@@ -286,6 +286,26 @@ assignment_joystick_hat_invalid = ungültig
 assignment_invalid = Nicht zugeordnet
 assignment_separator = ,\x20
 
+[raildriver]
+notdetected = No RailDriver conrollers detected.
+config_error = Error loading RailDriver calibration file.
+calibration_start = Please press 'Next' to start calibration.
+calibration_a = Move the reverser lever to the full reverse position and press 'Next'.
+calibration_b = Move the reverser lever to the full forward position and press 'Next'.
+calibration_c = Move the combined brake / throttle lever to the full power position and press 'Next'.
+calibration_d = Move the combined brake / throttle lever to the full brake position and press 'Next'.
+calibration_e = Move the dynamic brake lever to the release position and press 'Next'.
+calibration_f = Move the dynamic brake lever to the emergency position and press 'Next'.
+calibration_g = Move the independant brake lever to the release position and press 'Next'.
+calibration_h = Move the independant brake lever to the full position and press 'Next'.
+calibration_i = Move the bail-off lever to the release position and press 'Next'.
+calibration_j = Move and hold the bail-off lever into the full position and press 'Next'.
+calibration_k = Move the wiper switch to OFF and press 'Next'.
+calibration_l = Move the wiper switch to FULL and press 'Next'.
+calibration_m = Move the lights switch to OFF and press 'Next'.
+calibration_n = Move the lights switch to FULL and press 'Next'.
+calibration_o = Calibration complete.
+
 [options]
 title = Optionen
 language = Sprache
