--- a/source/Plugins/Texture.Ace/Texture.Ace.csproj
+++ b/source/Plugins/Texture.Ace/Texture.Ace.csproj
@@ -51,6 +51,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Plugin.cs" />
