New: CarXmlConvertor supports extensions.cfg & some train.dat properties

--- a/source/CarXMLConvertor/CarXMLConvertor.csproj
+++ b/source/CarXMLConvertor/CarXMLConvertor.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convert.ExtensionsCfg.cs" />
     <Compile Include="Convert.TrainDat.cs" />
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
