Change: Separate events into distinct files

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -109,6 +109,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game\AI.cs" />
+    <Compile Include="Game\Events\Events.cs" />
+    <Compile Include="Game\Events\Events.TriggerType.cs" />
+    <Compile Include="Game\Events\EventTypes\BackgroundChange.cs" />
+    <Compile Include="Game\Events\EventTypes\BrightnessChange.cs" />
+    <Compile Include="Game\Events\EventTypes\FogChange.cs" />
+    <Compile Include="Game\Events\EventTypes\Markers.cs" />
+    <Compile Include="Game\Events\EventTypes\RequestStop.cs" />
+    <Compile Include="Game\Events\EventTypes\SignalSection.cs" />
+    <Compile Include="Game\Events\EventTypes\Sounds.cs" />
+    <Compile Include="Game\Events\EventTypes\SpeedLimit.cs" />
+    <Compile Include="Game\Events\EventTypes\Station.cs" />
+    <Compile Include="Game\Events\EventTypes\TrackEnd.cs" />
+    <Compile Include="Game\Events\EventTypes\Transponder.cs" />
     <Compile Include="Game\Markers.cs" />
     <Compile Include="Game\MessageManager.cs" />
     <Compile Include="Game\MessageManager.ImageMessage.cs" />
@@ -392,6 +405,7 @@
       <LastGenOutput>AssemblyInfo.cs</LastGenOutput>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- AUTOMATICALLY TRANSLATE TEXT TEMPLATES -->
   <!-- Optionally make the import portable across VS versions -->
